@@ -74,12 +74,17 @@
   variance (cf. Diggle 2003, page 118). This implies that \code{sigma = h/2}.
 }
 \value{
-  A numerical value giving the selected bandwidth.
+  A single numerical value giving the selected bandwidth.
   The result also belongs to the class \code{"bw.optim"}
-  which can be plotted.
+  (see \code{\link[spatstat.explore]{bw.optim.object}})
+  which can be plotted to show the bandwidth selection criterion
+  as a function of \code{sigma}.
 }
 \seealso{
   \code{\link{density.ppp}},
+  \code{\link[spatstat.explore]{bw.optim.object}}.
+
+  Alternative methods:
   \code{\link{bw.ppl}},
   \code{\link{bw.scott}},
   \code{\link{bw.CvL}},
