@@ -73,12 +73,15 @@
   calculations involving more pairs of data points.
 }
 \value{
-  A numerical value giving the selected bandwidth.
+  A single numerical value giving the selected bandwidth.
   The result also belongs to the class \code{"bw.optim"}
-  which can be plotted.
+  (see \code{\link[spatstat.explore]{bw.optim.object}})
+  which can be plotted to show the bandwidth selection criterion
+  as a function of \code{sigma}.
 }
 \seealso{
-  \code{\link{Smooth.ppp}}
+  \code{\link{Smooth.ppp}},
+  \code{\link[spatstat.explore]{bw.optim.object}}
 }
 \examples{
   \testonly{op <- spatstat.options(n.bandwidth=8)}
