@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.explore VERSION 3.1-0.024
+        CHANGES IN spatstat.explore VERSION 3.1-0.025
 
 OVERVIEW
 
@@ -14,6 +14,8 @@ OVERVIEW
     o multitype pair correlation functions can save numerator and denominator.
 
     o multitype inhomogeneous J functions.
+
+    o More support for automatic bandwidth selection.
     
     o Bug fixes in calculation of standard errors.
 
